--- a/ap-reflect.cabal
+++ b/ap-reflect.cabal
@@ -19,7 +19,7 @@ library
   ghc-options:         -Wall
   exposed-modules:     Debug.Reflect
   -- other-modules:       
-  build-depends:       base ==4.6.*
+  build-depends:       base >= 4.7 && < 5
 
 Source-Repository head
   Type:                 git
