--- a/ap-reflect.cabal
+++ b/ap-reflect.cabal
@@ -1,7 +1,10 @@
 name:                ap-reflect
-version:             0.1.0.0
+version:             0.2
 synopsis:            Partial evaluation reflection a la simple-reflect.
--- description:         
+description:         The library provides a simple reflection technique,
+                     substituting functions like @fmap@ and @\<*\>@ with reflection-aware analogues.
+
+                     This library can be used with <http://hackage.haskell.org/package/simple-reflect simple-reflect package>.
 license:             BSD3
 license-file:        LICENSE
 author:              Oleg Baev
@@ -9,9 +12,12 @@ maintainer:          odbaev@yandex.ru
 homepage:            https://github.com/cmc-msu-ai/ap-reflect
 bug-reports:         https://github.com/cmc-msu-ai/ap-reflect/issues
 -- copyright:           
--- category:            
+category:            Debug
 build-type:          Simple
 cabal-version:       >=1.10
+extra-source-files:  README.md
+                   , CHANGELOG.md
+                   , examples/*.hs
 
 library
   default-language:    Haskell2010
