--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,30 @@
-language: haskell
-ghc: 7.8
+sudo: false
 
+addons:
+  apt:
+    sources:
+      - hvr-ghc
+    packages:
+      - happy-1.19.5
+      - libgmp-dev
+
+env:
+  - STACK_YAML=stack.yaml
+
+before_install:
+  # Download and unpack the stack executable
+  - mkdir -p ~/.local/bin
+  - export PATH=$HOME/.local/bin:/opt/happy/1.19.5/bin:$PATH
+  - travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
+  - export PATH=~/.local/bin:$PATH
+  - stack --version
+
+install:
+  - stack setup
+
+script:
+  - stack --no-terminal build --test
+
+cache:
+  directories:
+    - $HOME/.stack
